# chorus

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.hypothesis/constants/: 2baf387eebaa0e56  41628e7aca8719e9  56d834bd6e4338d4  69fcd9099361c3ab  6d824ea8b13f5234  823201d3ce2c6b74  afaec11aa944b4dd  b6663dd0da7e9bc5  cab98ac00153a57f  cd146ac2c6988eb7  da39a3ee5e6b4b0d  e81f27bbac42c0e5
chorus/cli/: main.py
chorus/config/: loader.py
chorus/core/: agent.py  memory.py  personality.py  state.py  types.py
chorus/llm/: anthropic_adapter.py  base.py  ollama_adapter.py  openai_adapter.py
chorus/orchestration/: session.py
chorus/parsing/: response_parser.py
chorus/prompts/: pipeline.py  token_budget.py
chorus/templates/agents/: accelerationist.yaml  analyst.yaml  behavioural_economist.yaml  biologist.yaml  butler.yaml  ceo_founder.yaml  cmo_founder.yaml  cognitive_scientist.yaml  communitarian.yaml  conservative.yaml  critic.yaml  cto_founder.yaml  deontologist.yaml  detective.yaml  (+35 more)
docs/: chorus-architecture.md  chorus-milestones.md
examples/: README.md  __init__.py  hello_world.py  product_launch_discussion.py  quick_app_naming.py
examples/output/: README.md
framework/: __init__.py
framework/core/: __init__.py  agent.py  personalities.yaml  personality.py  state.py
framework/llm/: __init__.py  adapter.py  openai_adapter.py
framework/orchestration/: __init__.py  framework.py
framework/utils/: __init__.py
tests/: test_agent.py  test_memory.py  test_parser.py  test_prompt_pipeline.py  test_session.py  test_state.py
(+15 files in other folders)
